[gd_scene load_steps=25 format=3 uid="uid://bhrd8kktpsqaw"]

[ext_resource type="Theme" uid="uid://bbi2cgvrophxf" path="res://resources/ui_theme.tres" id="1_cp2k5"]
[ext_resource type="Script" path="res://scripts/character_customizer.gd" id="1_lygp0"]
[ext_resource type="PackedScene" uid="uid://cwtg7ry4qh2gk" path="res://resources/character_customization/skeleton.glb" id="4_4i7e5"]
[ext_resource type="PackedScene" uid="uid://dcn6c4rekhjgy" path="res://scenes/UI/part_option.tscn" id="5_4au8o"]
[ext_resource type="PackedScene" uid="uid://b2b2ujij0gqg4" path="res://resources/character_customization/hair/hair_01/hair_01.gltf" id="5_g7glv"]
[ext_resource type="PackedScene" uid="uid://cbtggxabm1us8" path="res://resources/character_customization/hair/hair_02/hair_02.gltf" id="6_klt6m"]
[ext_resource type="Resource" uid="uid://cyahw45ae1o11" path="res://resources/character_customization/hair/hair_customization_data.tres" id="6_lrjya"]
[ext_resource type="Resource" uid="uid://do14tft1n7vwa" path="res://resources/character_customization/heads/head_customization_data.tres" id="7_4oty0"]
[ext_resource type="PackedScene" uid="uid://313jdsluauoo" path="res://resources/character_customization/hair/hair_03/hair_03.gltf" id="7_7ncxs"]
[ext_resource type="Resource" uid="uid://bbxq8b0keqtui" path="res://resources/character_customization/bodies/body_customization_data.tres" id="8_at1jg"]
[ext_resource type="PackedScene" uid="uid://c6d3xslhdase1" path="res://resources/character_customization/hair/hair_04/hair_04.gltf" id="8_nrabm"]
[ext_resource type="Resource" uid="uid://dxskiseq6jksr" path="res://resources/character_customization/hands/hands_customization_data.tres" id="9_774uw"]
[ext_resource type="PackedScene" uid="uid://dantplraqhl2c" path="res://resources/character_customization/hair/hair_05/hair_05.gltf" id="9_gn8tm"]
[ext_resource type="Resource" uid="uid://dgik57f7plw4w" path="res://resources/character_customization/feet/feet_customization_data.tres" id="10_1xpan"]
[ext_resource type="Script" path="res://scripts/character_customization_handler.gd" id="10_2rs12"]
[ext_resource type="PackedScene" uid="uid://c1uojvj4o87ml" path="res://resources/character_customization/heads/head_01/head_01.gltf" id="10_gnal5"]
[ext_resource type="PackedScene" uid="uid://c6557u3g3tni4" path="res://resources/character_customization/bodies/body_01/body_01.gltf" id="11_edev0"]
[ext_resource type="PackedScene" uid="uid://dppq0g48atmab" path="res://resources/character_customization/hands/hand_01/hand_01.gltf" id="12_aa2xq"]
[ext_resource type="PackedScene" uid="uid://71x5wlvqo68y" path="res://resources/character_customization/feet/foot_01/foot_01.gltf" id="13_0tm3m"]
[ext_resource type="Material" uid="uid://b7w8010tceypg" path="res://resources/run-particles.tres" id="14_x0gpm"]
[ext_resource type="Script" path="res://scripts/character_customization_camera.gd" id="16_0kovt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2tk58"]
bg_color = Color(0, 0, 0, 0.498039)

[sub_resource type="SphereMesh" id="SphereMesh_eovla"]

[sub_resource type="Environment" id="Environment_gchmh"]
background_mode = 1
ambient_light_source = 2
ambient_light_color = Color(0.74902, 0.74902, 0.74902, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_lygp0")
metadata/_edit_vertical_guides_ = []
metadata/_edit_horizontal_guides_ = []

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 230
dragger_visibility = 2

[node name="LeftPanel" type="Panel" parent="HSplitContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2tk58")

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6

[node name="PartOptions" type="VBoxContainer" parent="HSplitContainer/LeftPanel/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_cp2k5")

[node name="HairOptions" parent="HSplitContainer/LeftPanel/MarginContainer/PartOptions" instance=ExtResource("5_4au8o")]
layout_mode = 2
character_customization_data = ExtResource("6_lrjya")
header_name = "Capelli"

[node name="HeadOptions" parent="HSplitContainer/LeftPanel/MarginContainer/PartOptions" instance=ExtResource("5_4au8o")]
layout_mode = 2
character_customization_data = ExtResource("7_4oty0")
header_name = "Testa"

[node name="BodyOptions" parent="HSplitContainer/LeftPanel/MarginContainer/PartOptions" instance=ExtResource("5_4au8o")]
layout_mode = 2
character_customization_data = ExtResource("8_at1jg")
header_name = "Corpo"

[node name="HandOptions" parent="HSplitContainer/LeftPanel/MarginContainer/PartOptions" instance=ExtResource("5_4au8o")]
layout_mode = 2
character_customization_data = ExtResource("9_774uw")
header_name = "Mani"

[node name="FeetOptionss" parent="HSplitContainer/LeftPanel/MarginContainer/PartOptions" instance=ExtResource("5_4au8o")]
layout_mode = 2
character_customization_data = ExtResource("10_1xpan")
header_name = "Piedi"

[node name="SubViewportContainer" type="SubViewportContainer" parent="HSplitContainer"]
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="HSplitContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(922, 648)
render_target_update_mode = 4

[node name="Player" type="CharacterBody3D" parent="HSplitContainer/SubViewportContainer/SubViewport"]

[node name="Character" parent="HSplitContainer/SubViewportContainer/SubViewport/Player" instance=ExtResource("4_4i7e5")]
script = ExtResource("10_2rs12")

[node name="Armature" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature" index="0"]
bones/0/rotation = Quaternion(0.707107, -5.33851e-08, -5.33851e-08, 0.707107)
bones/2/rotation = Quaternion(0.707107, -5.32845e-08, -5.32845e-08, 0.707107)
bones/3/rotation = Quaternion(0.707107, -5.32845e-08, -5.32845e-08, 0.707107)

[node name="Hair" type="BoneAttachment3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D" index="0"]
transform = Transform3D(1, -2.2153e-10, 0, 2.2153e-10, 1, -3.6053e-14, 0, 1.20661e-16, 1, -0.00237339, 1.05901, 1.04595e-07)
bone_name = "Head"
bone_idx = 4

[node name="Transform" type="Node3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/Hair"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000509031, 0.529077, -0.000797987)

[node name="hair_01" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/Hair/Transform" instance=ExtResource("5_g7glv")]

[node name="hair_02" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/Hair/Transform" instance=ExtResource("6_klt6m")]
transform = Transform3D(1, -1.22418e-23, 0, -3.15355e-21, 1, 0, 0, 0, 1, -0.000509031, -0.00123107, 0.000797987)
visible = false

[node name="hair_03" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/Hair/Transform" instance=ExtResource("7_7ncxs")]
transform = Transform3D(1, -1.22418e-23, 0, -3.15355e-21, 1, 0, 0, 0, 1, -0.000509031, -0.00123107, 0.000797987)
visible = false

[node name="hair_04" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/Hair/Transform" instance=ExtResource("8_nrabm")]
transform = Transform3D(1, -1.22418e-23, 0, -3.15355e-21, 1, 0, 0, 0, 1, -0.000509031, -0.00123107, 0.000797987)
visible = false

[node name="hair_05" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/Hair/Transform" instance=ExtResource("9_gn8tm")]
transform = Transform3D(1, -1.22418e-23, 0, -3.15355e-21, 1, 0, 0, 0, 1, -0.000509031, -0.00123107, 0.000797987)
visible = false

[node name="Head" type="BoneAttachment3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D" index="1"]
transform = Transform3D(1, -2.2153e-10, 0, 2.2153e-10, 1, -3.6053e-14, 0, 1.20661e-16, 1, -0.00237339, 1.05901, 1.04595e-07)
bone_name = "Head"
bone_idx = 4

[node name="Transform" type="Node3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.32831e-10, 0.527846, 0)

[node name="head_01" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/Head/Transform" instance=ExtResource("10_gnal5")]

[node name="Body" type="BoneAttachment3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D" index="2"]
transform = Transform3D(1, 2.84558e-10, 2.38419e-07, -2.84558e-10, 1, -3.60002e-14, -2.38419e-07, 0, 1, 0, 0.271337, 0)
bone_name = "Body"
bone_idx = 1

[node name="Transform" type="Node3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/Body"]
transform = Transform3D(1, 4.86974e-34, 0, -8.56694e-21, 1, 0, 0, -2.04252e-27, 1, -6.93889e-18, 1.329, -9.92617e-24)

[node name="body_01" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/Body/Transform" instance=ExtResource("11_edev0")]

[node name="LeftHand" type="BoneAttachment3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D" index="3"]
transform = Transform3D(1, 2.38419e-07, -1.50996e-07, -1.50996e-07, -3.60002e-14, -1, -2.38419e-07, 1, 3.59324e-14, 0.534013, 0.649523, -0.101297)
bone_name = "Hand.L"
bone_idx = 2

[node name="Transform" type="Node3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/LeftHand"]
transform = Transform3D(1, -2.8431e-15, 0, 0, 1.19249e-08, 1, -8.07793e-28, -1, 1.19249e-08, 0.964617, 0.0528166, -0.957391)

[node name="hand_01" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/LeftHand/Transform" instance=ExtResource("12_aa2xq")]

[node name="RightHand" type="BoneAttachment3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D" index="4"]
transform = Transform3D(1, 2.38419e-07, -1.50996e-07, -1.50996e-07, -3.60002e-14, -1, -2.38419e-07, 1, 3.59324e-14, -0.553, 0.649523, -0.101297)
bone_name = "Hand.R"
bone_idx = 3

[node name="Transform" type="Node3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/RightHand"]
transform = Transform3D(1, -2.8431e-15, 0, 0, 1.19249e-08, 1, -8.07793e-28, -1, 1.19249e-08, 0.551673, 0.0528166, -0.957391)

[node name="hand_01" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/RightHand/Transform" instance=ExtResource("12_aa2xq")]

[node name="LeftFoot" type="BoneAttachment3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D" index="5"]
transform = Transform3D(1, 0, -1.50996e-07, -1.50996e-07, 0, -1, 0, 1, 0, 0.289554, 0.108391, -0.0850061)
bone_name = "Foot.L"
bone_idx = 6

[node name="Transform" type="Node3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/LeftFoot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.408894, 0.178666, -1.48968)

[node name="foot_01" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/LeftFoot/Transform" instance=ExtResource("13_0tm3m")]

[node name="RightFoot" type="BoneAttachment3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D" index="6"]
transform = Transform3D(1, 0, -1.50996e-07, -1.50996e-07, 0, -1, 0, 1, 0, -0.299047, 0.108391, -0.0850061)
bone_name = "Foot.R"
bone_idx = 5

[node name="Transform" type="Node3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/RightFoot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.407477, 0.178666, -1.49251)

[node name="foot_01" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/RightFoot/Transform" instance=ExtResource("13_0tm3m")]

[node name="ParticleSystem" type="GPUParticles3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/Character"]
transform = Transform3D(1, 0, 0, 0, 0.86864, 0.495443, 0, -0.495443, 0.86864, 0, 0.116937, 0.310255)
emitting = false
amount = 30
process_material = ExtResource("14_x0gpm")
draw_pass_1 = SubResource("SphereMesh_eovla")

[node name="CameraArm" type="SpringArm3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.06805, 0)
collision_mask = 0
spring_length = 3.0
margin = 0.1
script = ExtResource("16_0kovt")
mouse_sensitivity = 0.1
controller_sensitivity = 3

[node name="Camera" type="Camera3D" parent="HSplitContainer/SubViewportContainer/SubViewport/Player/CameraArm"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="HSplitContainer/SubViewportContainer/SubViewport"]
environment = SubResource("Environment_gchmh")

[connection signal="part_selected" from="HSplitContainer/LeftPanel/MarginContainer/PartOptions/HairOptions" to="." method="_on_part_selected"]
[connection signal="part_selected" from="HSplitContainer/LeftPanel/MarginContainer/PartOptions/HeadOptions" to="." method="_on_part_selected"]
[connection signal="part_selected" from="HSplitContainer/LeftPanel/MarginContainer/PartOptions/BodyOptions" to="." method="_on_part_selected"]
[connection signal="part_selected" from="HSplitContainer/LeftPanel/MarginContainer/PartOptions/HandOptions" to="." method="_on_part_selected"]
[connection signal="part_selected" from="HSplitContainer/LeftPanel/MarginContainer/PartOptions/FeetOptionss" to="." method="_on_part_selected"]

[editable path="HSplitContainer/SubViewportContainer/SubViewport/Player/Character"]
[editable path="HSplitContainer/SubViewportContainer/SubViewport/Player/Character/Armature/Skeleton3D/Hair/Transform/hair_01"]
